[tool.poetry]
name = "get-photo"
version = "0.1.0"
description = ""
authors = ["Eldar  <cooperative.entr@gmail.com>"]
readme = "README.md"
packages = [{include = "get_photo"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
